# Codeheart-Operating-Kit

./: .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  LICENSE  README.md  bootstrap.md  go.mod  install.ps1  install.sh  manifest.yaml  pyproject.toml  release-notes.md  resources.go
.github/ISSUE_TEMPLATE/: docs-routing.yml  doctrine-workflow-gap.yml  feature-request.yml  install-sync-check.yml  kit-bug.yml  rough-feedback.yml
.github/workflows/: validate.yml
cmd/codeheart-operating-kit/: main.go
components/agent-interface/: component.yaml
components/agent-memory/: component.yaml
components/native-codex-capabilities/: component.yaml
components/planning-workflows/: component.yaml
components/structure-governance/: component.yaml
components/validators/: component.yaml
docs/: README.md
profiles/: standard.yaml
schemas/: component.schema.json  consumer-impact.schema.json  content-manifest.schema.json  kit-config.schema.json  kit-lock-v1.schema.json  kit-lock.schema.json  pack-manifest.schema.json  profile.schema.json  release-catalog.schema.json  release-manifest.schema.json
scripts/: build-release-assets.py  validate-json-schemas.py  validate-markdown-headers.py  validate-public-core.py  validate-release-manifest.py
tests/: test_capabilities.py  test_cli.py  test_drift.py  test_go_cli_parity.py  test_init.py  test_inspect.py  test_install_metadata.py  test_json_schemas.py  test_markdown_headers.py  test_onboard.py  test_packaging_resources.py  test_public_core.py  test_release_assets.py  test_routing.py  test_sync_check.py  test_update_check.py
(+255 files in other folders)
